--- a/chatbot-scheduler/package.json
+++ b/chatbot-scheduler/package.json
@@ -1,5 +1,6 @@
 {
   "name": "chatbot-scheduler",
+  "homepage": "https://Msde-7.github.io/Scheduler-Deployment/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,12 +8,16 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.0",
     "@tailwindcss/vite": "^4.1.3",
+    "github": "^14.0.0",
     "marked": "^15.0.7",
+    "pages": "^0.0.16",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.1.3"
@@ -25,6 +30,7 @@
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "gh-pages": "^6.3.0",
     "globals": "^15.15.0",
     "vite": "^6.2.0"
   }
